--- a/anaconda-ks.cfg
+++ b/anaconda-ks.cfg
@@ -3,10 +3,11 @@
 auth --enableshadow --passalgo=sha512
 # Use CDROM installation media
 cdrom
-# Use graphical install
-graphical
+# Use text install
+install
+text
 # Run the Setup Agent on first boot
-firstboot --enable
+firstboot --disable
 ignoredisk --only-use=sda
 # Keyboard layouts
 keyboard --vckeymap=fr-oss --xlayouts='fr (oss)'
@@ -14,7 +15,7 @@ keyboard --vckeymap=fr-oss --xlayouts='fr (oss)'
 lang fr_FR.UTF-8
 
 # Network information
-network  --bootproto=dhcp --device=enp0s3 --onboot=off --ipv6=auto
+network  --bootproto=dhcp --device=enp0s3 --onboot=on --ipv6=auto
 network  --hostname=localhost.localdomain
 
 # Root password
@@ -31,9 +32,25 @@ clearpart --none --initlabel
 @^minimal
 @core
 kexec-tools
+wget
 
 %end
 
 %addon com_redhat_kdump --enable --reserve-mb='auto'
+
+%end
+
+#######################################################################################
+
+%post
+#!/bin/sh
+
+set -x -v
+exec 1>/root/kickstart-stage2.log 2>&1
+
+cd /root/
+wget https://raw.githubusercontent.com/MyDomoHome/HostServer/master/install.sh 
+chmod +x install.sh
+./install.sh
 
 %end
